--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -3,6 +3,7 @@ name: GitHub-Profile-3D-Contrib
 on:
   schedule: # 03:00 JST == 09:45 UTC
     - cron: "0 18 * * *"
+  workflow_dispatch:
 
 jobs:
   build:
